--- a/src/main/resources/templates/seminar.html
+++ b/src/main/resources/templates/seminar.html
@@ -25,7 +25,7 @@ LPMO" crossorigin="anonymous" />
 <body class="container d-flex flex-column justify-content- center" style="min-height: 100vh">
   <!-- <body> -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-      <a class="navbar-brand" style="color: white;">Daftar Event</a>
+      <a class="navbar-brand" style="color: white;">Event Registration</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -77,9 +77,10 @@ LPMO" crossorigin="anonymous" />
             <td th:text="${eventseminar.pembicara}"></td>
   
             <td>
-             <a href="#" 
-               class="btn btn-primary"
-              >Detail</a>
+              <a th:href="@{/seminar/peserta/{idPenyelenggara}/{idEvent}(idPenyelenggara=${idPenyelenggara}, idEvent=${eventseminar.id})}" 
+              class="btn btn-primary">
+              Detail
+            </a>
            </td>
           </tr>
         </tbody>
